<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_order_status"
            android:icon="@drawable/ic_local_shipping_normal"
            android:title="@string/order_status" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/Account"
            android:title="@string/nav_account">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_person"
                    android:title="@string/nav_profile" />
                <item
                    android:id="@+id/nav_change_password"
                    android:icon="@drawable/ic_lock"
                    android:title="@string/nav_change_password" />
            </menu>
        </item>
    </group>
</menu>