<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbEditProfile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Sửa hồ sơ"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvChangeAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="70dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_avatar" />

                    <ImageView
                        android:id="@+id/imgChangeAvatar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/ic_photo_camera" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:lines="1"
                android:padding="15dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spnGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/birthday"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="15dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:lines="1"
                android:padding="15dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/address"
                android:inputType="text"
                android:lines="1"
                android:padding="15dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/job"
                android:inputType="text"
                android:lines="1"
                android:padding="15dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/facebook"
                android:inputType="text"
                android:lines="1"
                android:padding="15dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/toolbar"
                android:padding="15dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>